# DesignPattern

./: AbstractFactory.cpp  Adapter.cpp  Bridge.cpp  CMakeLists.txt  Combine.cpp  ConstructPattern.cpp  Decorator.cpp  DesignLearning.kdev4  Facet.cpp  FactoryPattern.cpp  Flyweight.cpp  Prototype.cpp  SimpleFactory.cpp  SingleTon.cpp
