cmake_minimum_required(VERSION 3.5)
project(designlearning)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(designlearning main.cpp)
add_executable(factory SimpleFactory.cpp)
add_executable(factoryPattern FactoryPattern.cpp)
add_executable(abstractFactory AbstractFactory.cpp)
add_executable(constructPattern ConstructPattern.cpp)

install(TARGETS constructPattern RUNTIME DESTINATION bin)
install(TARGETS abstractFactory RUNTIME DESTINATION bin)
install(TARGETS designlearning RUNTIME DESTINATION bin)
install(TARGETS factory RUNTIME DESTINATION bin)
install(TARGETS factoryPattern RUNTIME DESTINATION bin)
