cmake_minimum_required(VERSION 3.5)
project(designlearning)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(designlearning main.cpp)
add_executable(factory SimpleFactory.cpp)
add_executable(factoryPattern FactoryPattern.cpp)
add_executable(abstractFactory AbstractFactory.cpp)
add_executable(constructPattern ConstructPattern.cpp)
add_executable(prototypePattern Prototype.cpp)
add_executable(singleTon SingleTon.cpp)
TARGET_LINK_LIBRARIES(singleTon -lpthread)
add_executable(adapter Adapter.cpp)
add_executable(bridge Bridge.cpp)
add_executable(combine Combine.cpp)
add_executable(decorator Decorator.cpp)
add_executable(facet Facet.cpp)
add_executable(flyweight Flyweight.cpp)

install(TARGETS flyweight RUNTIME DESTINATION bin)
install(TARGETS facet RUNTIME DESTINATION bin)
install(TARGETS decorator RUNTIME DESTINATION bin)
install(TARGETS combine RUNTIME DESTINATION bin)
install(TARGETS bridge RUNTIME DESTINATION bin)
install(TARGETS adapter RUNTIME DESTINATION bin)
install(TARGETS singleTon RUNTIME DESTINATION bin)
install(TARGETS prototypePattern RUNTIME DESTINATION bin)
install(TARGETS constructPattern RUNTIME DESTINATION bin)
install(TARGETS abstractFactory RUNTIME DESTINATION bin)
install(TARGETS designlearning RUNTIME DESTINATION bin)
install(TARGETS factory RUNTIME DESTINATION bin)
install(TARGETS factoryPattern RUNTIME DESTINATION bin)
